--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright, or something
+	Edit for conflict
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
