--- a/simple.html
+++ b/simple.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>
-<!--
-	Copyright, or something
-	Edit for conflict
-	Another master edit for conflict
-	
--->
-<head>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<style>
-		body {
-			padding-top: 50px;
-			padding-bottom: 20px;
-		}
-	</style>
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-</head>
-<body>
-	<main class="container">
-	<!-- Content Goes Here -->
-		<p>
-			Just some content goes here
-		</p>
-	</main>
-	<footer class="container">
-		<p>&copy; Company 2023</p>
-	</footer>
-</body>
-</html>
+<!DOCTYPE html>
+<!--
+	Copyright, or something
+	Edit for conflict
+	Branch edit for conflict
+-->
+<head>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<style>
+		body {
+			padding-top: 50px;
+			padding-bottom: 20px;
+		}
+	</style>
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+</head>
+<body>
+	<main class="container">
+	<!-- Content Goes Here -->
+		<p>
+			Just some content goes here
+		</p>
+	</main>
+	<footer class="container">
+		<p>&copy; Company 2023</p>
+	</footer>
+</body>
+</html>
