master conflict change 2

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,8 @@
 <!--
 	Copyright, or something
 	Edit for conflict
+	Another master edit for conflict
+	
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
