another change after rebase

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,6 @@
 <!--
 	Copyright, or something
 	Edit for conflict
-	Branch edit for conflict
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -18,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content goes here
+			Just some content goes here			And here
 		</p>
 	</main>
 	<footer class="container">
