--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright, or something
-	Edit for conflict
+	Edit for conflict		Some more editing
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content goes here			And here
+			Just some content goes here,			here,			and sometimes here
 		</p>
 	</main>
 	<footer class="container">
