--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
+        <!-- change made in GitHub -->
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
