--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </form>
         </div><!--/.navbar-collapse -->
       </div>
-    </div><!-- change -->
+    </div><!-- change again -->
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
