--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright, or something
-	Edit for conflict		Some more editing		Edit for stash
+	Edit for conflict		Some more editing		Edit for stash		Edit for tagging
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
